--- a/Hasher.Tests/Hasher.Tests.csproj
+++ b/Hasher.Tests/Hasher.Tests.csproj
@@ -7,9 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-    <ItemGroup>
-	    <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
-	    <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="4.1.0" />
+  </ItemGroup>
 
 </Project>
